basic auth added
Co-authored-by: Copilot <copilot@github.com>